--- a/SkypeAPI/SkypeAPI/SkypeAPI.vcproj
+++ b/SkypeAPI/SkypeAPI/SkypeAPI.vcproj
@@ -171,6 +171,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\DynamicListC.c"
+				>
+			</File>
+			<File
 				RelativePath=".\SkypeAPI.c"
 				>
 			</File>
@@ -204,6 +208,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\DynamicListC.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Resource.h"
 				>
