--- a/trunk/iPhoneBook/iPhoneBook.vcproj
+++ b/trunk/iPhoneBook/iPhoneBook.vcproj
@@ -228,6 +228,122 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\imgs\alert_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\alert_no_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\alert_no_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\alert_yes_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\alert_yes_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\all_contacts_button.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\cancelButton_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\cancelButton_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_info_wnd_app_name_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_app_name_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_call_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_call_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_delete_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_delete_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_edit_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_edit_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_info_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_button_info_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_letter_seperator_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_name_bg_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_name_bg_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\contact_wnd_search_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\edit_contact_button.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\email_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\email_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\exit_button_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\exit_button_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\ifone_bg.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\iPhoneBook.ico"
 				>
 			</File>
@@ -236,7 +352,111 @@
 				>
 			</File>
 			<File
+				RelativePath=".\imgs\main_wnd_bin_empty_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_bin_empty_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_bin_full_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_bin_full_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_center_pic.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_clock_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_clock_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_contact_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_contact_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_info_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_info_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_low_bar_left.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_low_bar_right.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\main_wnd_under_date_bg.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\map_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\map_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\okButton_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\okButton_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\skype_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\skype_on.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\small.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\top_bar_skype_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\top_bar_skype_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\www_off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\www_on.bmp"
 				>
 			</File>
 		</Filter>
@@ -289,6 +509,14 @@
 			</File>
 			<File
 				RelativePath=".\ListView.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Miscellaneous.c"
+				>
+			</File>
+			<File
+				RelativePath=".\Miscellaneous.h"
 				>
 			</File>
 		</Filter>
