--- a/trunk/iPhoneBook/iPhoneBook.vcproj
+++ b/trunk/iPhoneBook/iPhoneBook.vcproj
@@ -268,6 +268,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\imgs\alpha2.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\imgs\cancelButton_off.bmp"
 				>
 			</File>
