--- a/iPhoneBook/iPhoneBook.vcproj
+++ b/iPhoneBook/iPhoneBook.vcproj
@@ -244,6 +244,10 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\imgs\add_contact_button.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\imgs\alert_bg.bmp"
 				>
 			</File>
@@ -348,6 +352,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\imgs\done_button.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\imgs\edit_contact_button.bmp"
 				>
 			</File>
@@ -357,6 +365,10 @@
 			</File>
 			<File
 				RelativePath=".\imgs\email_on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\empty_trash_button.bmp"
 				>
 			</File>
 			<File
@@ -469,6 +481,10 @@
 			</File>
 			<File
 				RelativePath=".\imgs\on.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\imgs\recover_contact_button.bmp"
 				>
 			</File>
 			<File
