--- a/trunk/iPhoneBook/iPhoneBook.rc
+++ b/trunk/iPhoneBook/iPhoneBook.rc
@@ -73,6 +73,7 @@ END
 
 IDD_ABOUTBOX DIALOGEX 0, 0, 254, 87
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU
+EXSTYLE WS_EX_TRANSPARENT
 CAPTION "About iPhoneBook"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
