--- a/trunk/iPhoneBook/iPhoneBook.vcproj
+++ b/trunk/iPhoneBook/iPhoneBook.vcproj
@@ -592,6 +592,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\PromptBox.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\PromptBox.h"
+				>
+			</File>
+			<File
 				RelativePath=".\ScrollContainer.c"
 				>
 			</File>
