--- a/iPhoneBook/iPhoneBook.rc
+++ b/iPhoneBook/iPhoneBook.rc
@@ -71,16 +71,12 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 254, 87
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU
-EXSTYLE WS_EX_TRANSPARENT
-CAPTION "About iPhoneBook"
-FONT 8, "MS Shell Dlg", 0, 0, 0x1
+IDD_PROMPTBOX DIALOGEX 0, 0, 277, 103
+STYLE DS_SETFONT | WS_POPUP | WS_SYSMENU
+EXSTYLE WS_EX_TOPMOST
+FONT 12, "Arial", 700, 0, 0x0
 BEGIN
-    ICON            128,IDC_STATIC,14,14,21,20
-    LTEXT           "iPhoneBook, Version 1.0",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2009",IDC_STATIC,42,26,114,8
-    DEFPUSHBUTTON   "OK",IDOK,197,66,50,14,WS_GROUP
+    LTEXT           "Static",IDC_PROMPTTEXT,3,3,65,24,SS_NOPREFIX
 END
 
 
@@ -92,12 +88,12 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO 
 BEGIN
-    IDD_ABOUTBOX, DIALOG
+    IDD_PROMPTBOX, DIALOG
     BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 247
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 80
+        LEFTMARGIN, 3
+        RIGHTMARGIN, 268
+        TOPMARGIN, 3
+        BOTTOMMARGIN, 66
     END
 END
 #endif    // APSTUDIO_INVOKED
