--- a/iPhoneBook/iPhoneBook.vcproj
+++ b/iPhoneBook/iPhoneBook.vcproj
@@ -468,6 +468,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\imgs\main_wnd_under_date_call_bg.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\imgs\map_off.bmp"
 				>
 			</File>
